--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.atykhonko.Application</mainClass>
+                            <mainClass>com.com.atykhonko.Application</mainClass>
                         </transformer>
                     </transformers>
                     <filters>
